[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabelL" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 1.0
margin_right = -16.0
margin_bottom = 74.0
rect_scale = Vector2( 0.84, 1 )
rect_pivot_offset = Vector2( 240.476, 37 )
custom_colors/font_color = Color( 0.639216, 0.168627, 0.501961, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
autowrap = true

[node name="ScoreLabelR" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -26.0
margin_top = 1.0
margin_right = 214.0
margin_bottom = 74.0
rect_scale = Vector2( 0.84, 1 )
rect_pivot_offset = Vector2( 240.476, 37 )
custom_colors/font_color = Color( 0.0745098, 0.509804, 0.176471, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
autowrap = true

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.0
margin_top = -130.0
margin_right = 239.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 1058, 367 )
custom_fonts/font = SubResource( 2 )
text = "Avoid the aliens!!"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = 38.0
margin_right = 85.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
